<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".QualificationPage">

    <!-- TODO: Update blank fragment layout -->
    <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_centerHorizontal="true"
        android:text="@string/POSt_qualification"
        android:textSize="20dp"
        android:layout_gravity="center"
        android:layout_marginTop="30dp" />

    <TextView
        android:id="@+id/question"
        android:layout_width="350dp"
        android:layout_height="200dp"
        android:layout_centerHorizontal="true"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="100dp"
        android:text="@string/Question"
        android:textSize="20sp"
        android:textStyle ="bold"
        android:layout_above = "@+id/title"
        android:layout_below = "@+id/ans_A"
    />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/choices"
        android:layout_centerInParent ="true"
        android:orientation="vertical">



    <Button
        android:id="@+id/ans_A"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:layout_above="@+id/question"
        android:layout_below="@+id/ans_B"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="250dp"
        android:text="@string/AnswerA" />

    <Button
        android:id="@+id/ans_B"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:layout_above="@+id/ans_A"
        android:layout_below="@+id/ans_C"
        android:layout_gravity="center_horizontal"
        android:text="@string/AnswerB"/>

    <Button
        android:id="@+id/ans_C"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:layout_above="@+id/ans_B"
        android:layout_below="@+id/ans_D"
        android:layout_gravity="center_horizontal"

        android:text="@string/AnswerC"/>

    <Button
        android:id="@+id/ans_D"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:layout_above="@+id/ans_C"
        android:layout_below="@+id/ans_E"
        android:layout_gravity="center_horizontal"

        android:text="@string/AnswerD" />



    </LinearLayout>

    <Button
        android:id="@+id/submit"
        android:layout_width="370dp"
        android:layout_height="wrap_content"
        android:layout_above="@+id/ans_B"
        android:layout_gravity="bottom"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="100dp"
        android:layout_marginBottom="150dp"
        android:text="@string/Submit" />

</FrameLayout>

