<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".studentPages.QualificationPage3"
    android:layout_margin="8dp">

    <!-- TODO: Update blank fragment layout -->
    <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:text="@string/POSt_qualification"
        android:textSize="20dp"
        android:textStyle="bold"
        android:layout_gravity="top|center"
        android:layout_marginTop="30dp" />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="80dp"
        android:layout_centerInParent ="true">

        <TextView
            android:id="@+id/question"
            android:layout_width= "wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/Question3"
            android:textSize="20dp"
            android:textStyle ="bold"
            android:layout_above = "@+id/title"
            android:layout_below = "@+id/course1"
            android:layout_marginLeft="6dp"

            />


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:orientation="horizontal"
            android:layout_centerInParent ="true">


            <LinearLayout
                android:id="@+id/course_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginLeft="35dp"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/course1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_above="@+id/question"
                    android:layout_below="@+id/course2"
                    android:layout_gravity="left"
                    android:text="@string/CourseA"
                    android:textSize="16dp" />

                <TextView
                    android:id="@+id/course2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_above="@+id/course1"
                    android:layout_below="@+id/course3"
                    android:layout_gravity="left"
                    android:layout_marginTop="26dp"
                    android:text="@string/CourseB"
                    android:textSize="16dp" />

                <TextView
                    android:id="@+id/course3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_above="@+id/course2"
                    android:layout_below="@+id/course4"
                    android:layout_gravity="left"
                    android:layout_marginTop="26dp"
                    android:text="@string/CourseC"
                    android:textSize="16dp" />

                <TextView
                    android:id="@+id/course4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_above="@+id/course3"
                    android:layout_below="@+id/course5"
                    android:layout_gravity="left"
                    android:layout_marginTop="26dp"
                    android:text="@string/CourseD"
                    android:textSize="16dp" />

                <TextView
                    android:id="@+id/course5"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_above="@+id/course4"
                    android:layout_gravity="left"
                    android:layout_marginTop="26dp"
                    android:text="@string/CourseE"
                    android:textSize="16dp" />

                <TextView
                    android:id="@+id/course6"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_above="@+id/course5"
                    android:layout_gravity="left"
                    android:layout_marginTop="26dp"
                    android:text="@string/CourseF"
                    android:textSize="16dp" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/gpa"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="30dp"
                android:orientation="vertical">

                <EditText
                    android:id="@+id/text_1"
                    android:layout_width="180dp"
                    android:layout_height="wrap_content"
                    android:layout_above="@+id/question"
                    android:layout_below="@+id/text2"
                    android:layout_gravity="right"
                    android:ems="10"
                    android:hint="@string/CourseHint"
                    android:inputType="numberDecimal"
                    android:minHeight="48dp"
                    android:text="" />


                <EditText
                    android:id="@+id/text_2"
                    android:layout_width="180dp"
                    android:layout_height="wrap_content"
                    android:layout_above="@+id/submit"
                    android:layout_gravity="right"
                    android:ems="10"
                    android:hint="@string/CourseHint"
                    android:inputType="numberDecimal"
                    android:minHeight="48dp"
                    android:text="" />


                <EditText
                    android:id="@+id/text_3"
                    android:layout_width="180dp"
                    android:layout_height="wrap_content"
                    android:layout_above="@+id/submit"
                    android:layout_gravity="right"
                    android:ems="10"
                    android:hint="@string/CourseHint"
                    android:inputType="numberDecimal"
                    android:minHeight="48dp"
                    android:text="" />


                <EditText
                    android:id="@+id/text_4"
                    android:layout_width="180dp"
                    android:layout_height="wrap_content"
                    android:layout_above="@+id/submit"
                    android:layout_gravity="right"
                    android:ems="10"
                    android:hint="@string/CourseHint"
                    android:inputType="numberDecimal"
                    android:minHeight="48dp"
                    android:text="" />


                <EditText
                    android:id="@+id/text_5"
                    android:layout_width="180dp"
                    android:layout_height="wrap_content"
                    android:layout_above="@+id/submit"
                    android:layout_gravity="right"
                    android:ems="10"
                    android:hint="@string/CourseHint"
                    android:inputType="numberDecimal"
                    android:minHeight="48dp"
                    android:text="" />

                <EditText
                    android:id="@+id/text_6"
                    android:layout_width="180dp"
                    android:layout_height="wrap_content"
                    android:layout_above="@+id/submit"
                    android:layout_gravity="right"
                    android:ems="10"
                    android:hint="@string/CourseHint"
                    android:inputType="numberDecimal"
                    android:minHeight="48dp"
                    android:text="" />
            </LinearLayout>

        </LinearLayout>

        <Button
            android:id="@+id/submit"
            android:layout_width="370dp"
            android:layout_height="wrap_content"
            android:layout_above="@+id/course5"
            android:layout_gravity="center|bottom"
            android:layout_marginHorizontal="20dp"
            android:layout_marginTop="50dp"
            android:layout_marginBottom="100dp"
            android:text="@string/Submit" />

    </LinearLayout>




    <Button
        android:id="@+id/previous"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="15dp"
        android:text="@string/Previous"
        android:layout_marginBottom="20dp"/>

    <Button
        android:id="@+id/back"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|right"
        android:layout_marginTop="20dp"
        android:layout_marginRight="15dp"
        android:text="Homepage"
        android:layout_marginBottom="20dp"/>

</FrameLayout>